--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^3.1.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
-    "astro": "^4.10.2"
+    "astro": "^4.10.2",
+    "npx": "^10.2.2"
   }
 }
